<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Password.PasswordActivity">

    <include
        android:id="@+id/include_toolbar_password_a"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/edit_password_a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/corner_round_whitetext"
        android:hint="@string/pw"
        android:padding="15dp"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar_password_a" />

    <TextView
        android:id="@+id/text_warnmessage_password_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_warnmsg2_signup_a"
        android:textColor="#EB685B"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/edit_password_a"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_a" />

    <EditText
        android:id="@+id/edit_check_password_a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/corner_round_whitetext"
        android:hint="@string/checkpw"
        android:padding="15dp"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_password_a"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_password_a"
        app:layout_constraintTop_toBottomOf="@+id/text_warnmessage_password_a" />

    <TextView
        android:id="@+id/text_warnmessage2_password_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_warnmsg3_signup_a"
        android:textColor="#EB685B"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/edit_password_a"
        app:layout_constraintTop_toBottomOf="@+id/edit_check_password_a" />

    <Button
        android:id="@+id/btn_confirm_password_a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/corner_round_graybtn"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edit_password_a"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/edit_password_a"
        app:layout_constraintTop_toBottomOf="@+id/text_warnmessage2_password_a" />

</androidx.constraintlayout.widget.ConstraintLayout>