<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Email.EmailActivity">

    <include
        android:id="@+id/include_toolbar_email_a"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_email_email_a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/corner_round_whitetext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="12dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_send_email_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar_email_a" />

    <Button
        android:id="@+id/btn_send_email_a"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/corner_round_primary"
        android:text="@string/send"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/edit_email_email_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_email_email_a"
        app:layout_constraintTop_toTopOf="@+id/edit_email_email_a"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_warnmsg1_email_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_warnmsg1_signup_a"
        android:textColor="#EB685B"
        android:textSize="12dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/edit_email_email_a"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_email_a"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edit_number_email_a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/corner_round_whitetext"
        android:hint="@string/certification_number"
        android:inputType="number"
        android:padding="15dp"
        android:singleLine="true"
        android:textSize="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btn_send_email_a"
        app:layout_constraintStart_toStartOf="@+id/edit_email_email_a"
        app:layout_constraintTop_toBottomOf="@+id/text_warnmsg1_email_a"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_numbermessage_email_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/certification_message"
        android:textSize="12dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/edit_email_email_a"
        app:layout_constraintTop_toBottomOf="@+id/edit_number_email_a"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_confirm_email_a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/corner_round_primary"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btn_send_email_a"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="@+id/edit_email_email_a"
        app:layout_constraintTop_toBottomOf="@+id/text_numbermessage_email_a"
        tools:visibility="visible" />

<!--    <TextView-->
<!--        android:id="@+id/text_block_email_a"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:alpha="0.45"-->
<!--        android:background="@drawable/corner_round_graybtn"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:visibility="visible" />-->

    <ProgressBar
        android:id="@+id/progressbar_wait_email_a"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>